test_errors.txt
   Compiling rustygrep v0.1.1 (C:\Users\saves\Downloads\rustygrep)
error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\llm_output_test.rs:4:5
  |
4 | use rustygrep::output::llm::{self, LlmOptions};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\llm_output_test.rs:5:5
  |
5 | use rustygrep::search::{FileMatches, Match};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\llm_output_test.rs:6:5
  |
6 | use rustygrep::search::SearchEngine;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\llm_output_test.rs:7:5
  |
7 | use rustygrep::walker::FileWalker;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
  --> tests\common\mod.rs:34:35
   |
34 | pub fn make_cli(args: &[&str]) -> rustygrep::cli::Cli {
   |                                   ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
   |
   = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
  --> tests\common\mod.rs:38:5
   |
38 |     rustygrep::cli::Cli::parse_from(full_args)
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
   |
   = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

warning: unused import: `clap::Parser`
  --> tests\common\mod.rs:35:9
   |
35 |     use clap::Parser;
   |         ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `setup_repo`
 --> tests\llm_output_test.rs:3:24
  |
3 | use common::{make_cli, setup_repo};
  |                        ^^^^^^^^^^

warning: unused import: `std::io::Write`
  --> tests\llm_output_test.rs:85:9
   |
85 |     use std::io::Write;
   |         ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0433`.
warning: `rustygrep` (test "mcp_test") generated 1 warning (1 duplicate)
error: could not compile `rustygrep` (test "mcp_test") due to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `rustygrep` (test "llm_output_test") generated 3 warnings
error: could not compile `rustygrep` (test "llm_output_test") due to 6 previous errors; 3 warnings emitted
